# hellow

./: pyproject.toml
hellow/scripts/: say_hello.py
