[tool.poetry]
name = "hellow"
version = "0.1.0"
description = ""
authors = ["epolval <Pvy1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipython = "^8.28.0"


[tool.poetry.scripts]
say-hello = "hellow.scripts.say_hello:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
